test/new.css
* {
  box-sizing: border-box;
}

a {
  color: #6900ff;
}

a:hover {
  color: #fff;
}

html, body {
  color: #fff;
  background-color: #222;
  height: 100%;
  width: 100%;
  max-width: 100%;
}

body {
  margin: 0;
  font-family: "DejaVu Sans Mono", monospace;
}

footer > p {
  margin: 0;
}

h1 {
  font-size: 2.2em;
  margin: 0.7em 0;
}
h2 {
  font-size: 1.5em;
  margin: 0.85em 0;
}
h3 {
  font-size: 1.3em;
  margin: 1em 0;
}
h4 {
  font-size: 1.2em;
  margin: 1.15em 0;
}
h5 {
  font-size: 1.1em;
  margin: 1.3em 0;
}
h6 {
  font-size: 1em;
  margin: 1.4em 0;
}

header {
  border-bottom: #fff 1px solid;
  text-align: center;
  background-image: url(/img/lotus.bloom.png);
  background-repeat: no-repeat;
  background-position: center;
  background-size: auto 80%;
}

header:hover,
header > a:hover {
  background-image: url(/img/lotus.bloom-mo.png);
  color: #6900ff;
}

header > a {
  color: inherit;
  text-decoration: none;
}

hr {
  background-color: #fff;
  color: #fff;
}

.contact {
  font-size: 0.8em;
  text-align: center;
}

.doc-body {
  display: flex;
  flex: 1;
}

.doc-content {
  flex: 3 1 400px;
  padding: 5px;
}

.doc-header {
  background-color: #000;
  border-bottom: #fff 1px solid;
  display: flex;
}

.doc-info {
  border-left: #fff 1px solid;
  flex: 1 2 120px;
  font-size: 0.8em;
  margin-left: auto;
  min-width: 120px;
  text-align: center;
}

.doc-info p {
  margin: 3px 15px;
}

.doc-nav {
  border-left: #666 1px solid;
  flex: 1 2 120px;
  margin-left: auto;
  min-width: 120px;
  padding: 10px;
}

.doc-nav > ol,
.doc-nav > ul {
  margin: 0.7em;
  list-style-type: none;
  padding: 0;
}

.main {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.nav {
  background-color: #000;
  border-bottom: #fff 1px solid;
  padding: 5px;
}

.site {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.title {
  flex: 3 1 400px;
  padding: 5px;
}


/* REVIEW CODE */
/* DROPDOWN STYLING */
.contact a,
.dropbtn,
.dropdown-items a,
.no-dropbtn {
  color: #fff;
  text-decoration: none;
}
.contact a,
.dropbtn,
.no-dropbtn {
  background-color: transparent;
  border: transparent 1px solid;
  cursor: pointer;
}
.contact a {
  display: inline-block;
}
.contact a,
.content-nav a {
  padding: 2px 1%;
}
.dropbtn,
.no-dropbtn {
  font-family: "DejaVu Sans Mono", monospace;
  font-size: 0.9rem;
  padding: 0.3rem 1rem;
}
.dropdown-items {
  background-color: #101010;
  border: #fff 1px solid;
  display: none;
  min-width: 160px;
  position: absolute;
  z-index: 2;
}
.dropdown-items a {
  border: 1px transparent solid;
  display: block;
  padding: 0.5rem 1rem;
  text-decoration: none;
}
.nav-item {
  position: relative;
  display: inline-block;
}
/* Navigation:hover */
.dropdown-items a:hover {
  background-color: #606060;
  border: 1px #fff solid;
}
.contact a:hover,
.dropbtn:hover,
.nav-item:hover .dropbtn,
.no-dropbtn:hover {
  background-color: #666;
  border: #fff 1px solid;
}
.nav-item:hover .dropdown-items {
  display: block;
}
/* Navigation:active */
.contact a:active,
.dropbtn:active,
.dropdown-items a:active,
.no-dropbtn:active {
  color: #6900ff;
}
.contact a:active,
.dropbtn:active,
.dropdown-items a:active,
.no-dropbtn:active {
  background-color: #000;
  border: #6900ff 1px solid;
}
.dropbtn:hover {
  border-bottom: transparent 1px solid;
}

